--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "glob":"latest",
+    "ali-oss": "latest"
   },
   "devDependencies": {
+      "@types/ali-oss": "latest",
     "@types/node": "^18.16.3",
     "@typescript-eslint/parser": "^5.59.2",
     "@vercel/ncc": "^0.36.1",
