--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "js-yaml": "^4.1.0",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
+    "@types/glob":"latest",
     "@types/jest": "latest",
     "typescript": "^5.0.4"
   }
