--- a/package.json
+++ b/package.json
@@ -25,25 +25,25 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "glob":"latest",
+    "@actions/core": "^1.10.1",
+    "ali-oss": "latest",
     "dotenv": "latest",
-    "ali-oss": "latest"
+    "glob": "latest"
   },
   "devDependencies": {
-      "@types/ali-oss": "latest",
-    "@types/node": "^20.3.0",
-    "@typescript-eslint/parser": "^5.59.11",
+    "@types/ali-oss": "latest",
+    "@types/glob": "latest",
+    "@types/jest": "latest",
+    "@types/node": "^20.14.13",
+    "@typescript-eslint/parser": "^5.62.0",
     "@vercel/ncc": "^0.36.1",
-    "eslint": "^8.39.0",
-    "eslint-plugin-github": "^4.7.0",
-    "eslint-plugin-jest": "^27.2.1",
-    "jest": "^29.5.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-github": "^4.10.2",
+    "eslint-plugin-jest": "^27.9.0",
+    "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
     "prettier": "^2.8.8",
-    "ts-jest": "^29.1.0",
-    "@types/glob":"latest",
-    "@types/jest": "latest",
-    "typescript": "^5.0.4"
+    "ts-jest": "^29.2.3",
+    "typescript": "^5.5.4"
   }
 }
